Fix uneven image resizing in resource page

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2962,19 +2962,19 @@ section,
 
 
 .img-container {
+  flex-shrink: 0; /* Prevents the image container from shrinking */
   width: 200px; /* Adjust this value to fit your container width */
-  height: 200px; /* Adjust this value to fit your container height */
   overflow: hidden;
 }
 
 .img-container img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
 }
 
 .description {
-  padding: 10px;
+  padding-left: 20px;
   color: rgba(42, 41, 41, 0.805);
 }
 
